src/objects/Translation__c.object
<CustomObject>
    <description>Translates Content or Media elements into a given language</description>
    <fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>Field Api Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>TextAreaRich</fullName>
                    <label>Text Area Rich</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>Language Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AvailableLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MediaElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Element</label>
        <referenceTo>MediaElement__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Detail</label>
        <referenceTo>SearchSetting__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TranslationEmail__c</fullName>
        <label>Translation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TranslationJSON__c</fullName>
        <label>Translation JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TranslationTextAreaRich__c</fullName>
        <label>Translation Text Area (Rich)</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TranslationTextArea__c</fullName>
        <label>Translation Text Area</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TranslationText__c</fullName>
        <label>Translation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranslationURL__c</fullName>
        <label>Translation URL</label>
        <type>Url</type>
    </fields>
    <label>Translation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId__c</columns>
        <columns>NAME</columns>
        <columns>Content__c</columns>
        <columns>LanguageCode__c</columns>
        <columns>FieldApiName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>